--- a/src/component/accounts/Profile/ProfileView/ProfileView.module.css
+++ b/src/component/accounts/Profile/ProfileView/ProfileView.module.css
@@ -11,7 +11,19 @@
 body {
     font-family: 'Mulish', sans-serif;
 }
-
+.add{
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 50px;
+    border-radius: 10px;
+    font-size: 20px;
+    text-align: center;
+    margin-bottom: 30px;
+    background: rgb(21, 23, 34);
+    color: white;
+    padding: 10px 20px;
+}
 .docThumb {
     border-radius: 20px;
 }
